--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,13 +2,14 @@
     "version": "2.0.0",
     "tasks": [
       {
-        "label": "Build with Clang",
+        "label": "build",
         "type": "shell",
         "command": "clang++",
         "args": [
           "-std=c++17",
           "-stdlib=libc++",
-          "src/main.cpp",
+          "-I./include",
+          "main.cpp",
           "-o",
           "dhnsw.out",
           "--debug"
