--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,7 @@
     "configurations": [
       {
         "name": "(lldb) Launch",
-        "type": "cppdbg",
+        "type": "lldb",
         "request": "launch",
         "program": "${workspaceFolder}/dhnsw.out",
         "args": [],
@@ -16,7 +16,8 @@
           "trace": true,
           "traceResponse": true,
           "engineLogging": true
-        }
+        },
+        "preLaunchTask": "${defaultBuildTask}"
       }
     ]
   }
