--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,25 @@
         "name": "(lldb) Launch",
         "type": "lldb",
         "request": "launch",
-        "program": "${workspaceFolder}/dhnsw.out",
+        "program": "${workspaceFolder}/build/dhnsw.out",
+        "args": [],
+        "stopAtEntry": true,
+        "cwd": "${workspaceFolder}",
+        "environment": [],
+        "externalConsole": true,
+        "MIMode": "lldb",
+        "logging": {
+          "trace": true,
+          "traceResponse": true,
+          "engineLogging": true
+        },
+        "preLaunchTask": "${defaultBuildTask}"
+      },
+      {
+        "name": "(lldb) Test",
+        "type": "lldb",
+        "request": "launch",
+        "program": "${workspaceFolder}/build/tests.out",
         "args": [],
         "stopAtEntry": true,
         "cwd": "${workspaceFolder}",
