--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
     "version": "2.0.0",
     "tasks": [
       {
-        "label": "build",
+        "label": "Build",
         "type": "shell",
         "command": "clang++",
         "args": [
@@ -11,13 +11,37 @@
           "-I./include",
           "main.cpp",
           "-o",
-          "dhnsw.out",
+          "build/dhnsw.out",
           "--debug"
         ],
         "group": {
           "kind": "build",
           "isDefault": true
         }
+      },
+      {
+        "label": "Build tests",
+        "type": "shell",
+        "command": "clang++",
+        "args": [
+          "-std=c++17",
+          "-stdlib=libc++",
+          "-I./include",
+          "-I./tests",
+          "tests/main.cpp",
+          "tests/hnsw_tests.cpp",
+          "-o",
+          "build/tests.out",
+          "--debug"
+        ],
+        "group": "test"
+      },
+      {
+        "label": "Tests",
+        "type": "shell",
+        "command": "./build/tests.out",
+        "group": "test",
+        "dependsOn": ["Build tests"]
       }
     ]
   }
