first pass at delete node

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -35,7 +35,7 @@
           "traceResponse": true,
           "engineLogging": true
         },
-        "preLaunchTask": "${defaultBuildTask}"
+        "preLaunchTask": "Build tests"
       }
     ]
   }
