--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
         "name": "(lldb) Debug",
         "type": "lldb",
         "request": "launch",
-        "program": "${workspaceFolder}/build/example.out",
+        "program": "${workspaceFolder}/build/example",
         "args": [],
         "stopAtEntry": true,
         "cwd": "${workspaceFolder}",
@@ -23,7 +23,7 @@
         "name": "(lldb) Test",
         "type": "lldb",
         "request": "launch",
-        "program": "${workspaceFolder}/build/tests.out",
+        "program": "${workspaceFolder}/build/tests",
         "args": [],
         "stopAtEntry": true,
         "cwd": "${workspaceFolder}",
