add avx2 example

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
         "name": "(lldb) Debug",
         "type": "lldb",
         "request": "launch",
-        "program": "${workspaceFolder}/build/example",
+        "program": "${workspaceFolder}/build/dhnsw_examples",
         "args": [],
         "stopAtEntry": true,
         "cwd": "${workspaceFolder}",
@@ -23,7 +23,7 @@
         "name": "(lldb) Test",
         "type": "lldb",
         "request": "launch",
-        "program": "${workspaceFolder}/build/tests",
+        "program": "${workspaceFolder}/build/hnsw_tests",
         "args": [],
         "stopAtEntry": true,
         "cwd": "${workspaceFolder}",
