--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
         "name": "(lldb) Debug",
         "type": "lldb",
         "request": "launch",
-        "program": "${workspaceFolder}/build/dhnsw_examples",
+        "program": "${workspaceFolder}/build/dhnsw_examples 10000",
         "args": [],
         "stopAtEntry": true,
         "cwd": "${workspaceFolder}",
